k8s-yamls/prod-ingresses/vote-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: haproxy
  tls:
  - hosts:
    - vote.prod.vhbj.site
    secretName: vote-tls
  rules:
  - host: vote.prod.vhbj.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 8080
